diesel_compile_tests/tests/fail/returning_clause_requires_selectable_expression.stderr
error[E0277]: `non_users::columns::noname` cannot appear in the `RETURNING` clause of this statement
   --> tests/fail/returning_clause_requires_selectable_expression.rs:27:20
    |
 LL |         .returning(non_users::columns::noname);
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ expression `non_users::columns::noname` is not a valid `RETURNING` element here
    |
help: the trait `ReturningExpression<diesel::query_builder::returning_clause::DeleteStmt, users::table>` is not implemented for `non_users::columns::noname`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: for `INSERT`/`UPDATE`/`DELETE` `RETURNING` lists, every element 
            must be a column, or a tuple of columns / `RETURNING`-valid 
            expressions, that belongs to the modified table.
            `old(col)` is only valid in `UPDATE` `RETURNING` lists.
    = help: the following other types implement trait `ReturningExpression<Stmt, Table>`:
              `(T, T1)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5, T6)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5, T6, T7)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5, T6, T7, T8)` implements `ReturningExpression<Stmt, Tab>`
            and N others
    = note: required for `DeleteStatement<table, WhereClause<...>, ...>` to implement `Query`
note: required by a bound in `DeleteStatement::<T, U>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/delete_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> DeleteStatement<T, U, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         DeleteStatement<T, U, ReturningClause<E>>: Query,
    |                                                    ^^^^^ required by this bound in `DeleteStatement::<T, U>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `non_users::columns::noname` cannot appear in the `RETURNING` clause of this statement
   --> tests/fail/returning_clause_requires_selectable_expression.rs:32:20
    |
 LL |         .returning(non_users::columns::noname);
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ expression `non_users::columns::noname` is not a valid `RETURNING` element here
    |
help: the trait `ReturningExpression<diesel::query_builder::returning_clause::InsertStmt, users::table>` is not implemented for `non_users::columns::noname`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: for `INSERT`/`UPDATE`/`DELETE` `RETURNING` lists, every element 
            must be a column, or a tuple of columns / `RETURNING`-valid 
            expressions, that belongs to the modified table.
            `old(col)` is only valid in `UPDATE` `RETURNING` lists.
    = help: the following other types implement trait `ReturningExpression<Stmt, Table>`:
              `(T, T1)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5, T6)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5, T6, T7)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5, T6, T7, T8)` implements `ReturningExpression<Stmt, Tab>`
            and N others
    = note: required for `InsertStatement<table, ..., ..., ...>` to implement `Query`
note: required by a bound in `InsertStatement::<T, U, Op>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/insert_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> InsertStatement<T, U, Op, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         InsertStatement<T, U, Op, ReturningClause<E>>: Query,
    |                                                        ^^^^^ required by this bound in `InsertStatement::<T, U, Op>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `non_users::columns::noname` cannot appear in the `RETURNING` clause of this statement
   --> tests/fail/returning_clause_requires_selectable_expression.rs:37:20
    |
 LL |         .returning(non_users::columns::noname);
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ expression `non_users::columns::noname` is not a valid `RETURNING` element here
    |
help: the trait `ReturningExpression<diesel::query_builder::returning_clause::UpdateStmt, users::table>` is not implemented for `non_users::columns::noname`
   --> tests/fail/returning_clause_requires_selectable_expression.rs:19:9
    |
 LL |         noname -> VarChar,
    |         ^^^^^^
    = note: for `INSERT`/`UPDATE`/`DELETE` `RETURNING` lists, every element 
            must be a column, or a tuple of columns / `RETURNING`-valid 
            expressions, that belongs to the modified table.
            `old(col)` is only valid in `UPDATE` `RETURNING` lists.
    = help: the following other types implement trait `ReturningExpression<Stmt, Table>`:
              `(T, T1)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5, T6)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5, T6, T7)` implements `ReturningExpression<Stmt, Tab>`
              `(T, T1, T2, T3, T4, T5, T6, T7, T8)` implements `ReturningExpression<Stmt, Tab>`
            and N others
    = note: required for `UpdateStatement<table, NoWhereClause, ..., ...>` to implement `Query`
note: required by a bound in `UpdateStatement::<T, U, V>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/update_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> UpdateStatement<T, U, V, ReturningClause<E>>
    |            --------- required by a bound in this associated function
...
LL |         UpdateStatement<T, U, V, ReturningClause<E>>: Query,
    |                                                       ^^^^^ required by this bound in `UpdateStatement::<T, U, V>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0277`.
